Bug 12384 - streams_depot leaves lost-XXXXX files on file deletion.
Summary: streams_depot leaves lost-XXXXX files on file deletion.
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: VFS Modules (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-19 23:39 UTC by Jeremy Allison
Modified: 2016-11-01 07:49 UTC (History)
2 users (show)

See Also:


Attachments
git-am fix for 4.5.next (5.62 KB, patch)
2016-10-21 19:09 UTC, Jeremy Allison
uri: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jeremy Allison 2016-10-19 23:39:26 UTC
Patch to follow.
Comment 1 Jeremy Allison 2016-10-21 19:09:06 UTC
Created attachment 12595 [details]
git-am fix for 4.5.next

Cherry-picked from master. 4.5.x only as 4.4 doesn't have the VFS changes for the tests (we could pick just the vfs_module patch if required for 4.4.next).
Comment 2 Uri Simchoni 2016-10-21 19:35:50 UTC
Assigning to Karolin for inclusion in 4.5.next.
Comment 3 Karolin Seeger 2016-10-31 10:13:49 UTC
(In reply to Uri Simchoni from comment #2)
Pushed to autobuild-v4-5-test.
Comment 4 Karolin Seeger 2016-11-01 07:49:45 UTC
(In reply to Karolin Seeger from comment #3)
Pushed to v4-5-test.
Closing out bug report.

Thanks!